Adds update of install, site playbooks and invetory file

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,37 +4,22 @@
   become: true
   tasks:
 
-  - name: update repository index
+  - name: install apache and php for Ubuntu servers
     apt:
+      name: 
+        - apache2
+        - libapache2-mod-php
+      state: latest
       update_cache: yes
-    when: ansible_distribution == 'Ubuntu'
-
-  - name: install apache2 package
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == 'Ubuntu'
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == 'Ubuntu'
+    when: ansible_distribution == "Ubuntu"
   
-  - name: update repository index
+  - name: install apache and php for CentOS servers
     dnf:
+      name: 
+        - httpd
+        - php
+      state: latest
       update_cache: yes
-    when: ansible_distribution == 'CentOS'
-
-  - name: install apache2 package
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == 'CentOS'
-
-  - name: add php support for apache
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == 'CentOS'
+    when: ansible_distribution == "CentOS"
     
+        
