adds 2 plays to change configuration file on target server, also used register(var)

--- a/site.yml
+++ b/site.yml
@@ -17,7 +17,7 @@
       upgrade: dist
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
-    
+        
 - hosts: web_servers
   become: true
   tasks:  
@@ -39,6 +39,29 @@
         - php
       state: latest
     when: ansible_distribution == "CentOS"
+    
+  - name: start httpd (CentOS)
+    tags: apache,centos,httpd
+    service:
+      name: httpd
+      state: started
+      enabled: yes
+    when: ansible_distribution == "CentOS"
+    
+  - name: change e-mail address for admin
+    tags: apache,centos,httpd
+    lineinfile: 
+      path: /etc/httpd/conf/httpd.conf
+      regexp: '^ServerAdmin'
+      line: ServerAdmin bravejongenit@gmail.com
+    when: ansible_distribution == "CentOS"
+    register: httpd
+  
+  - name: restart httpd (CentOS)
+    tags: apache,centos,httpd
+    service:
+      name: httpd
+    when: httpd.changed
     
   - name: copy default html file for site
     tags: apache,apache2,httpd
