--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -1,28 +1,17 @@
-- name: install httpd package (CentOS)
+- name: install apache and php packages
   tags: apache,centos,httpd
-  dnf:
+  package:
     name:
-      - httpd
-      - php
+      - "{{ apache_package_name }}"
+      - "{{ php_package_name }}"
     state: latest
-  when: ansible_distribution == "CentOS"
  
-- name: start and enable httpd (CentOS)
-  tags: apache,centos,httpd
+- name: start and enable apache service
+  tags: apache,httpd
   service:
-    name: httpd
+    name: "{{ apache_service }}"
     state: started
     enabled: yes
-  when: ansible_distribution == "CentOS"
- 
-- name: install apache2 package (Ubuntu)
-  tags: apache,apache2,ubuntu
-  apt:
-    name:
-     - apache2
-     - libapache2-mod-php
-    state: latest
-  when: ansible_distribution == "Ubuntu"
  
 - name: change e-mail address for admin
   tags: apache,centos,httpd
@@ -31,17 +20,10 @@
     regexp: '^ServerAdmin'
     line: ServerAdmin bravejongenit@gmail.com
   when: ansible_distribution == "CentOS"
-  register: httpd
- 
-- name: restart httpd (CentOS)
-  tags: apache,centos,httpd
-  service:
-    name: httpd
-    state: restarted
-  when: httpd.changed    
+  notify: restart_apache
  
 - name: copy html file for site
-  tags: apache,apache,apache2,httpd
+  tags: apache,apache2,httpd
   copy:
     src: default_site.html
     dest: /var/www/html/index.html
